# lerobot_anyteleop

./: .gitignore  README.md  conftest.py  pyproject.toml
assets/urdf/grippers/robotiq_2f85/: robotiq_2f85.urdf
configs/: panda.yaml  ur5e.yaml  xarm7.yaml
src/lerobot_anyteleop/: __init__.py  config.py  factory.py  joint_utils.py  transforms.py
src/lerobot_anyteleop/cli/: convert_to_lerobot.py  fetch_urdf.py  inspect_hdf5.py  list_cameras.py  teleop.py  viz.py
src/lerobot_anyteleop/devices/: __init__.py
src/lerobot_anyteleop/devices/camera/: __init__.py  base.py  manager.py  realsense.py
src/lerobot_anyteleop/devices/follower/: __init__.py  base.py  franka.py  ur.py  xarm7.py
src/lerobot_anyteleop/devices/gripper/: __init__.py  base.py  franka.py  none.py  robotiq.py  xarm.py
src/lerobot_anyteleop/devices/leader/: __init__.py  base.py  so101.py
src/lerobot_anyteleop/kinematics/: __init__.py  base.py  pyroki_model.py  urdf.py
src/lerobot_anyteleop/recording/: __init__.py  hdf5_recorder.py
src/lerobot_anyteleop/retargeting/: __init__.py  retargeter.py
src/lerobot_anyteleop/robots/: __init__.py  registry.py
src/lerobot_anyteleop/teleop/: __init__.py  controller.py  pipeline.py
src/lerobot_anyteleop/viz/: __init__.py  gripper_visual.py  viser_app.py
tests/: test_controller.py  test_gripper.py  test_gripper_visual.py  test_hdf5_recorder.py  test_joint_map.py  test_pipeline.py  test_retargeter.py  test_transforms.py  test_urdf_meshes.py
